--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<li class="list-group-item">
 						<strong>Computer Science tutor for <a href="http://inl.gov/">University of Idaho</a></strong>:
 						Helped CS students with programming assignments by asking probing questions, checking error messages and
-						reading through code. Helped students study and explained fundamental CS concepts. 
+						reading through code. Guided students study by explained fundamental CS concepts. 
 					</li>
 					<li class="list-group-item">
 						<strong>Computer technician at <a href="http://inl.gov/">University of Idaho</a></strong>:
@@ -104,11 +104,11 @@
 								<ul class="list-group card-text">
 									<li class="list-group-item">C/C++</li>
 									<li class="list-group-item">Python</li>
-									<li class="list-group-item">Java/Javascript</li>									
-									<li class="list-group-item">Prolog/ML</li>
+									<li class="list-group-item">Java</li>
+									<li class="list-group-item">C#</li>
 									<li class="list-group-item">Bash/Shell/Perl</li>
-									<li class="list-group-item">HTML</li>
-								</ul>
+									<li class="list-group-item">HTML/Javascript/Typescript</li>
+									<li class="list-group-item">Prolog</li>								</ul>
 							</div>
 						</div>
 						<div class="col">
@@ -117,12 +117,13 @@
 								Libraries & Tools
 								</h5>
 								<ul class="list-group card-text">
-									<li class="list-group-item">Qt</li>
+									<li class="list-group-item">PyTorch</li>
+									<li class="list-group-item">NumPy/Pandas</li>										
 									<li class="list-group-item">Git/GitHub/GitLab</li>
 									<li class="list-group-item">LaTeX</li>
 									<li class="list-group-item">Make/CMake</li>
 									<li class="list-group-item">Flex/Bison</li>
-									<li class="list-group-item">NumPy/Pandas</li>								</ul>
+							</ul>
 							</div>
 						</div>
 						<div class="col">
@@ -131,12 +132,12 @@
 								Platforms
 								</h5>
 								<ul class="list-group card-text">
-									<li class="list-group-item">CentOS/Rocky Linux</li>
-									<li class="list-group-item">Ubuntu</li>
+									<li class="list-group-item">Linux</li>
 									<li class="list-group-item">Windows</li>
 									<li class="list-group-item">Web</li>
 									<li class="list-group-item">Virtualization</li>
 									<li class="list-group-item">Unity</li>
+									<li class="list-group-item">Qt</li>
 								</ul>
 							</div>
 						</div>
