--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 									<li class="list-group-item">Java</li>
 									<li class="list-group-item">C#</li>
 									<li class="list-group-item">Bash/Shell/Perl</li>
-									<li class="list-group-item">HTML/Javascript/Typescript</li>
+									<li class="list-group-item">HTML</li>
 									<li class="list-group-item">Prolog</li>								</ul>
 							</div>
 						</div>
@@ -120,6 +120,7 @@
 									<li class="list-group-item">PyTorch</li>
 									<li class="list-group-item">NumPy/Pandas</li>										
 									<li class="list-group-item">Git/GitHub/GitLab</li>
+									<li class="list-group-item">Microsoft Office</li>
 									<li class="list-group-item">LaTeX</li>
 									<li class="list-group-item">Make/CMake</li>
 									<li class="list-group-item">Flex/Bison</li>
@@ -135,7 +136,7 @@
 									<li class="list-group-item">Linux</li>
 									<li class="list-group-item">Windows</li>
 									<li class="list-group-item">Web</li>
-									<li class="list-group-item">Virtualization</li>
+									<li class="list-group-item">Visual Code/Visual Studio</li>
 									<li class="list-group-item">Unity</li>
 									<li class="list-group-item">Qt</li>
 								</ul>
