Fixed U of I links

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 				<h2 style="padding-top:70px" class="text-center" id="experience">Experience</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
-						<strong>Computer Science tutor for <a href="http://inl.gov/">University of Idaho</a></strong>:
+						<strong>Computer Science Tutor at <a href="https://www.uidaho.edu/">University of Idaho</a></strong>:
 						Helped CS students with programming assignments by asking probing questions, checking error messages and
-						reading through code. Guided students study by explained fundamental CS concepts. 
+						reading through code. 
 					</li>
 					<li class="list-group-item">
-						<strong>Computer technician at <a href="http://inl.gov/">University of Idaho</a></strong>:
-						Patched software and installed new versions to eliminate security problems and protect data.  Broke down and evaluated user problems, using personal expertise, and probing questions.
+						<strong>Computer Technician at <a href="https://www.uidaho.edu/">University of Idaho</a></strong>:
+						Patched software and installed new versions to eliminate security problems and protect data.  Broke down and evaluated user problems, using personal expertise, and precise questioning.
 					</li>
 				</ul>
 
