--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 									<li class="list-group-item">Linux</li>
 									<li class="list-group-item">Windows</li>
 									<li class="list-group-item">Web</li>
-									<li class="list-group-item">Visual Code/Visual Studio</li>
+									<li class="list-group-item">Visual Code/Studio</li>
 									<li class="list-group-item">Unity</li>
 									<li class="list-group-item">Qt</li>
 								</ul>
