--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<h1 class="text-center">Welcome!</h1>
 						<br><br>
 						<p>
-							Hello! My name is David and I'm a currently a senior C.S. student at the University of Idaho. 
+							Hello! My name is David and I'm a currently a junior C.S. student at the University of Idaho. 
 							This website is meant to be a resource for anyone that is trying to get to know me better and a highlight of my work.
 							<br><br>
 							I'm passionate working on and creating solutions to real life problems using technology.
