--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
 				<ul class="list-group">
 					<li class="list-group-item">
 						<strong>Computer Science Tutor at <a href="https://www.uidaho.edu/">University of Idaho</a></strong>:
-						Helped CS students with programming assignments by asking probing questions, checking error messages and
-						reading through code. 
+						Assisted students with programming assignments by analyzing code, thorough questioning, and reading
+						error messages. Enhanced students understanding of fundamental computer science topics by explaining and showing
+						examples on a white board.
 					</li>
 					<li class="list-group-item">
 						<strong>Computer Technician at <a href="https://www.uidaho.edu/">University of Idaho</a></strong>:
