--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 				<h2 style="padding-top:70px" class="text-center" id="work">Projects</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
-						<strong>Connect4 AI in Python using an adversarial search: </strong><a href="https://github.com/cyberbush/Connect4-with-AI">Connect4-with-AI</a>
-					</li>
-					<li class="list-group-item">
 						<strong>Concurrent image processing in C: </strong><a href="https://github.com/cyberbush/Fork-Image">Fork-Image</a>
 					</li>
 					<li class="list-group-item">
-						<strong>Pong game in Unity: </strong><a href="https://github.com/cyberbush/Pong_Unity">Pong</a>
+						<strong>2D Tower Defense Game: </strong><a href="https://github.com/Bloonagins/WonkyWizards">WonkyWizards</a>
 					</li>
+					<li class="list-group-item">
+						<strong>Connect4 AI in Python using an adversarial search: </strong><a href="https://github.com/cyberbush/Connect4-with-AI">Connect4-with-AI</a>
+					</li>					
 					<li class="list-group-item">
 						<strong>Custom parser in C: </strong><a href="https://github.com/cyberbush/Parser">Parser</a>
 					</li>
