--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 								<ul class="list-group card-text">
 									<li class="list-group-item">C/C++</li>
 									<li class="list-group-item">Python</li>
-									<li class="list-group-item">Java</li>
+									<li class="list-group-item">Java/JavaScript</li>
 									<li class="list-group-item">C#</li>
 									<li class="list-group-item">Bash/Shell/Perl</li>
 									<li class="list-group-item">HTML</li>
