--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 				<h2 style="padding-top:70px" class="text-center" id="work">Projects</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
+						<strong>Link shortener application: </strong><a href="https://shorten-url-link.netlify.app/">URLShortener</a>
+					</li>
+					<li class="list-group-item">
 						<strong>Concurrent image processing in C: </strong><a href="https://github.com/cyberbush/Fork-Image">Fork-Image</a>
 					</li>
 					<li class="list-group-item">
