--- a/index.html
+++ b/index.html
@@ -108,24 +108,24 @@
 								<ul class="list-group card-text">
 									<li class="list-group-item">C/C++</li>
 									<li class="list-group-item">Python</li>
-									<li class="list-group-item">Java/JavaScript</li>
+									<li class="list-group-item">JavaScript</li>
+									<li class="list-group-item">Java</li>
 									<li class="list-group-item">C#</li>
-									<li class="list-group-item">Bash/Shell/Perl</li>
-									<li class="list-group-item">HTML</li>
+									<li class="list-group-item">HTML/CSS</li>
 								</ul>
 							</div>
 						</div>
 						<div class="col">
 							<div class="card card-body bg-dark m-1 p-2">
 								<h5 style="color:#FFFFFF" class="card-title">
-								Libraries & Tools
+								Tools
 								</h5>
 								<ul class="list-group card-text">
 									<li class="list-group-item">Git/GitHub/GitLab</li>								
-									<li class="list-group-item">Make/CMake</li>
+									<li class="list-group-item">Linux</li>
+									<li class="list-group-item">Make</li>
+									<li class="list-group-item">Bash/Shell</li>
 									<li class="list-group-item">Flex/Bison</li>
-									<li class="list-group-item">NumPy/Pandas</li>										
-									<li class="list-group-item">Microsoft Office</li>
 									<li class="list-group-item">LaTeX</li>
 								</ul>
 							</div>
@@ -133,15 +133,15 @@
 						<div class="col">
 							<div class="card card-body bg-dark m-1 p-2">
 								<h5 style="color:#FFFFFF" class="card-title">
-								Platforms
+								Libraries/Frameworks
 								</h5>
 								<ul class="list-group card-text">
-									<li class="list-group-item">Linux</li>
-									<li class="list-group-item">Windows</li>
-									<li class="list-group-item">Web</li>
-									<li class="list-group-item">Visual Code/Studio</li>
+									<li class="list-group-item">React</li>
+									<li class="list-group-item">Node.js</li>
+									<li class="list-group-item">Material UI</li>
+									<li class="list-group-item">Pandas</li>
+									<li class="list-group-item">NumPy</li>
 									<li class="list-group-item">Unity</li>
-									<li class="list-group-item">Qt</li>
 								</ul>
 							</div>
 						</div>
