--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 								<ul class="list-group card-text">
 									<li class="list-group-item">React</li>
 									<li class="list-group-item">Node.js</li>
-									<li class="list-group-item">Material UI</li>
+									<li class="list-group-item">Scikit-learn</li>
 									<li class="list-group-item">Pandas</li>
 									<li class="list-group-item">NumPy</li>
 									<li class="list-group-item">Unity</li>
