--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>David Bush</h1>
+								<p>I'm currently a senior C.S. student at the University of Idaho. This website is meant to be a resource for anyone that is trying to get to know me better and a highlight of my work. </p>
 							</div>
 						</div>
 						<nav>
