Updated about, experience, projects, contact pages

--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 			<div id="wrapper">
 				<!-- Header -->
 					<header id="header">
-						<div class="logo">
-							<span class="icon fa-gem"></span>
-						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>David Bush</h1>
@@ -23,10 +20,12 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
+								<li><a href="#intro">About</a></li>
 								<li><a href="#experience">Experience</a></li>
 								<li><a href="#projects">Projects</a></li>
 								<li><a href="#contact">Contact</a></li>
+								<li><a href="#signup">Sign Up</a></li>
+								<li><a href="#signin">Sign In</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -37,33 +36,64 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/profile.jpg" alt="" /></span>
-								<p>Hello! My name is David and I'm currently a senior C.S. student at the University of Idaho.     This website is meant to be a resource for anyone that is trying to get to know me better and a highlight of my work.</a>.</p>
-								<p>I'm passionate about working on and creating solutions to real life problems using technology.     I enjoy an environment that constantly challenges my abilities and allows me to grow. I have a strong interest in space exploration and other futuristic technologies.</p>
+								<h2 class="major">About</h2>
+								<img class="profileImg" src="images/profile.jpg" alt=""/>
+								<p>Hello! My name is David and I'm currently a senior C.S. student at the University of Idaho. This website is meant to be a resource for anyone that is trying to get to know me better and a highlight of my work.</a>.</p>
+								<p>I'm passionate about working on and creating solutions to real life problems using technology. I enjoy an environment that constantly challenges my abilities and allows me to grow. I have a strong interest in space exploration and other futuristic technologies.</p>
 							</article>
 
 						<!-- Experience -->
 							<article id="experience">
 								<h2 class="major">Experience</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>experience 1</p>
-								<p>experience 2</p>
-								<p>experience 3</p>
+								<h3>Software Engineering Intern, Capital One</h3>
+								<h5>June 2022 - Aug 2022</h5>
+								<ul>
+									<li>Enhanced internal marketing platform by implementing a new feature to provide analytics information.</li>
+									<li>Designed and developed the frontend using TypeScript, Vue.js (Vuetify), and Node.js.</li>
+									<li>Collaborated with backend engineers to add a new endpoint to the existing API.</li>
+									<li>Deployed the project to lower environments after extensive testing and approvals.</li>
+								</ul>
+								<h3>Computer Science Tutor, University of Idaho</h3>
+								<h5>Aug 2021 - May 2022</h5>
+								<ul>
+									<li>Assisted students with programming assignments by analyzing code, thorough questioning, and reading error messages.</li>
+									<li>Enhanced students understanding of fundamental computer science topics by explaining and showing examples on a white board.</li>
+								</ul>
 							</article>
 
 						<!-- Projects -->
 							<article id="projects">
 								<h2 class="major">projects</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>project 1</p>
-								<p>project 2</p>
-								<p>project 3</p>
+								<h3>Custom C Compiler (C++) <a href="https://github.com/cyberbush/c-">link</a></h3>
+								<ul>
+									<li>Built a compiler for the C- language. Similar to the C language but without structs, some array operations, and certain keywords.</li>
+									<li>Used flex/yacc for generating a scanner and parser for the language.</li>
+									<li>Created an abstract syntax tree containing type information and for error checking.</li>
+									<li>Generated assembly instructions from the C- program and executed instructions using a Tiny Machine (32-bit processor).</li>
+								</ul>
+								<h3>Breast Cancer Detection (Python, Pytorch) <a href="https://dscomp.nkn.uidaho.edu/competition1">link</a></h3>
+								<ul>
+									<li>Developed a machine learning model to detect whether a breast ultrasound image was benign or malignant.</li>
+									<li>Used the pretrained EfficientNet-B4 and data augmentation to achieve an 80.16% test accuracy.</li>
+								</ul>
+								<h3>2D Video Game (C#, Unity) <a href="https://github.com/Bloonagins/WonkyWizards">link</a></h3>
+								<ul>
+									<li>Collaborated on a team of 6 developers designing and creating a 2D tower defense game in Unity.</li>
+									<li>Responsible for creating and implementing 8 unique enemy types which had built in path-finding, targeting, abilities, and simple AI.</li>
+								</ul>
 							</article>
-
+						
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
+								<div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://2piratebay.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+								<h3>Phone: 208-569-3745</h3>
+								<h3>Email: cyberbush3@gmail.com</h3>
+								<h3>Location: Moscow, Idaho</h3>
+							</article>
+						<!-- Signup -->
+							<article id="signup">
+								<h2 class="major">Sign Up</h2>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
@@ -84,12 +114,6 @@
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
 							</article>
 
 						<!-- Elements -->
@@ -338,13 +362,15 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; David Bush 2022</a>.</p>
 					</footer>
 
 			</div>
 
 		<!-- BG -->
-			<div id="bg"></div>
+			<div id="bg">
+
+			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
