--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 								<li><a href="#intro">About</a></li>
 								<li><a href="#experience">Experience</a></li>
 								<li><a href="#projects">Projects</a></li>
-								<li><a href="#contact">Contact</a></li>
+<!-- 								<li><a href="#contact">Contact</a></li>
 								<li><a href="#signin">Sign In</a></li>
-								<li><a href="#signup">Sign Up</a></li>
+								<li><a href="#signup">Sign Up</a></li> -->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
